# case-history-app

./: .env.example  .gitignore  Dockerfile  agent.py  api.py  captcha_prompt.md  main.py  options_prompt.md  pyproject.toml  strip-css.js  summary_prompt.md  system.md
backend/: api.py  main.py  pyproject.toml
backend/data/: all_ps.json
backend/prompts/: captcha_prompt.md  summary_prompt.md
backend/src/: browser.py  config.py  district.py  llm.py  models.py  scraper.py
frontend/: package-lock.json  package.json
frontend/chat-data/: 815bd81c-978b-4ca7-ae23-20d395a6c205.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chats/: route.ts
frontend/src/app/api/chats/[id]/: route.ts
frontend/src/app/api/chats/[id]/chat/: route.ts
frontend/src/app/api/chats/[id]/input/: route.ts
frontend/src/app/api/chats/[id]/stream/: route.ts
frontend/src/app/api/chats/all-ps/: route.ts
frontend/src/app/chat/[id]/: page.tsx
frontend/src/components/: ChatView.tsx  Sidebar.tsx
frontend/src/lib/: storage.ts  types.ts
